Fixed the Op that needs space around it is now processed right.